<resources>
    <string name="app_name">EcommerceConcept</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_address">Add address</string>
    <string name="my_cart">My cart</string>
    <string name="checkout">Checkout</string>
    <string name="city">City</string>
    <string name="select_category">Select Category</string>
    <string name="view_all">view all</string>
    <string name="hot_sales">Hot sales</string>
    <string name="see_more">see more</string>
</resources>