<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    tools:context=".presentation.ui.fragments.cart.CartFragment">

    <ImageButton
        android:id="@+id/ib_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dp_36"
        android:layout_marginStart="@dimen/dp_42"
        android:background="@drawable/ic_btn_back"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/ib_address"
        app:layout_constraintBottom_toBottomOf="@id/ib_address"
        app:layout_constraintEnd_toStartOf="@id/ib_address"
        android:layout_marginEnd="@dimen/dp_8"
        android:background="@android:color/transparent"
        android:text="@string/add_address"
        style="@style/title_15sp_medium_black"/>

    <ImageButton
        android:id="@+id/ib_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_36"
        android:layout_marginEnd="46dp"
        android:background="@drawable/ic_btn_address"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ib_back"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginStart="@dimen/dp_42"
        android:text="@string/my_cart"
        style="@style/title_35sp_bold_black"/>

    <View
        android:id="@+id/view"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_bottom_navigation"
        android:layout_marginTop="@dimen/dp_49"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintBottom_toBottomOf="@id/view"
        android:layout_marginTop="@dimen/dp_80"
        android:layout_marginStart="@dimen/dp_23"
        android:layout_marginEnd="@dimen/dp_64"/>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="#33FFFFFF"
        app:layout_constraintBottom_toTopOf="@id/btn_checkout"
        android:layout_marginBottom="@dimen/dp_27"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/dp_44"
        android:layout_marginEnd="@dimen/dp_44"
        android:layout_marginBottom="@dimen/dp_44"
        android:background="@drawable/bg_btn_red"
        style="@style/title_20sp_bold_white"
        android:text="@string/checkout"
        android:textAllCaps="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>