<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.fragments.home.HomeFragment">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp_20"
        android:paddingBottom="@dimen/dp_10"
        android:background="@color/colorBackground"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_location"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Zihuatanejo, Gro"
                    style="@style/title_15sp_medium_black"
                    android:layout_marginStart="@dimen/dp_10"/>
            </LinearLayout>

            <ImageButton
                android:id="@+id/ib_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/dp_35"
                android:background="@drawable/ic_filter"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.navigation.NavigationView>

    <TextView
        android:id="@+id/select_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/navigation_bar"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/select_category"
        style="@style/title_25sp_bold_black"
        android:layout_marginTop="@dimen/dp_18"
        android:layout_marginStart="@dimen/dp_18"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_18"
        app:layout_constraintTop_toTopOf="@id/select_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/select_category"
        android:background="@android:color/transparent"
        android:textAllCaps="false"
        android:text="@string/view_all"
        style="@style/title_15sp_regular_red"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/select_category"
        android:layout_marginTop="@dimen/dp_24"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"/>

    <LinearLayout
        android:id="@+id/search_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rv_category"
        android:layout_marginTop="@dimen/dp_15"
        android:orientation="horizontal"
        android:layout_marginEnd="@dimen/dp_18"
        android:layout_marginStart="@dimen/dp_32"
        android:gravity="center">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_36"
            android:background="@drawable/bg_search_view"
            app:searchIcon="@drawable/ic_search"
            android:paddingStart="@dimen/dp_8"
            style="@style/title_12sp_regular_grey"
            android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@id/rv_category"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_menu"/>
    </LinearLayout>

    <TextView
        android:id="@+id/hot_sales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_container"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/hot_sales"
        style="@style/title_25sp_bold_black"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_more_hot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/hot_sales"
        app:layout_constraintBottom_toBottomOf="@id/hot_sales"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/transparent"
        android:textAllCaps="false"
        android:text="@string/see_more"
        style="@style/title_15sp_regular_red"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_hot_sales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/hot_sales"
        android:layout_marginTop="@dimen/dp_10"/>

    <TextView
        android:id="@+id/best"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rv_hot_sales"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginTop="@dimen/dp_10"
        android:text="Best sellers"
        style="@style/title_25sp_bold_black"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_more_best"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/best"
        app:layout_constraintBottom_toBottomOf="@id/best"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/transparent"
        android:textAllCaps="false"
        android:text="@string/see_more"
        style="@style/title_15sp_regular_red"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_best"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintTop_toBottomOf="@id/best"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/chip_bottom_navigation"
        android:layout_marginTop="@dimen/dp_15"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        app:menu="@menu/menu_bottom_navigation" />

    <com.ismaeldivita.chipnavigation.ChipNavigationBar
        android:id="@+id/chip_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        app:cnb_badgeColor="@color/white"
        app:cnb_unselectedColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_bottom_navigation"
        app:cnb_menuResource="@menu/menu_bottom_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>